--- a/Code Examples/week12/simple-API/package.json
+++ b/Code Examples/week12/simple-API/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.4",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongoose": "^5.1.6"
   }
 }
