--- a/Code Examples/week12/simple-API-complete/package.json
+++ b/Code Examples/week12/simple-API-complete/package.json
@@ -10,6 +10,8 @@
   "author": "WEB422 Seneca College",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongoose": "^5.1.6"
