--- a/Code Examples/week11/simple-API-complete/package.json
+++ b/Code Examples/week11/simple-API-complete/package.json
@@ -14,6 +14,9 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "mongoose": "^5.1.6"
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.1.6",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   }
 }
