--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 author_profile: true
 title: WEB422
 description: Web Programming for Apps and Services
