--- a/Code Examples/teams-api/package.json
+++ b/Code Examples/teams-api/package.json
@@ -1,6 +1,7 @@
 {
   "name": "teams-api",
-  "version": "1.0.0",
+  "version": "1.1.0",
+  "repository": "sictweb/web422",
   "description": "Starter REST API for use in WEB422",
   "main": "server.js",
   "scripts": {
@@ -10,9 +11,10 @@
   "author": "Patrick Crawford",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "cors": "^2.8.4",
-    "express": "^4.15.4",
-    "mongoose": "^5.4.20"
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "mongoose": "^5.5.5",
+    "morgan": "^1.9.1"
   }
 }
