--- a/Code Examples/week4/bridge-vue/package.json
+++ b/Code Examples/week4/bridge-vue/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "he": "^1.2.0",
+    "leaflet": "^1.5.1",
     "vue": "^2.6.10"
   },
   "devDependencies": {
