--- a/Code Examples/week1/webapi-v5/package.json
+++ b/Code Examples/week1/webapi-v5/package.json
@@ -11,7 +11,6 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "mongoose": "^5.6.6"
+    "express": "^4.17.1"
   }
 }
