--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ theme: jekyll-theme-minimal
 author_profile: true
 title: WEB422
 description: Web Programming for Apps and Services
+baseurl: /web422
 encoding: UTF-8
