--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ author_profile: true
 title: WEB422
 description: Web Programming for Apps and Services
 encoding: UTF-8
-website: https://patrick-crawford.github.io/WEB422-Backup
+url: https://patrick-crawford.github.io/WEB422-Backup
